# weta_igloo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
data/: 24h_hourly_averages.csv  Rock_data.xlsx  Weta_thermoregulation_datasheet.xlsx  full_duration_hourly_aggregates.csv  full_duration_overall_stats.csv  total_duration_averages.csv
docs/: conf.py  index.rst  modules.rst
igloo_weta/: __init__.py  constants.py  fitting.py  ingest.py  physics.py  sensitivity.py  viz.py
scripts/: run_analysis.py
