[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "igloo-weta"
version = "0.1.0"
description = "Thermal model for wētā burrow heat exchange — null model + metabolic heat estimation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Bart R.H. Geurten", email = "bgeurte@gwdg.de"},
]
keywords = ["thermal-model", "weta", "thermoregulation", "ectotherm", "ecology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=2.0", "sphinx-autodoc-typehints"]

[project.urls]
Homepage = "https://github.com/zerotonin/igloo_weta"
Repository = "https://github.com/zerotonin/igloo_weta"
Issues = "https://github.com/zerotonin/igloo_weta/issues"

[tool.setuptools.packages.find]
include = ["igloo_weta*"]
